src/test/resources/api/WEB-INF/jsp/error/json/404.jsp
{
	"status":"404",
	"title":"Not Found",
	"description": "The requested URL was not found on this server."
}
<%@ page contentType="application/json; charset=UTF-8"%>